Fixed the card sizes not matching on small screens

--- a/apps/webclient/src/app/projects/pages/main/main.component.scss
+++ b/apps/webclient/src/app/projects/pages/main/main.component.scss
@@ -27,4 +27,5 @@
 .project__row > div {
   flex: 1 1 0px;
   padding: 16px 16px 0 0;
+  width: 50px;
 }
